# esup-schedulesy-backend

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci-docker.yml  .gitlab-ci.yml  .pre-commit-config.yaml  .vault_password.txt  LICENSE  README.rst  fabfile.py  generate_requirements.sh  manage.py  pyproject.toml  run_tests.py  setup.py  sonar-project.properties  tox.ini
deploy/: BUGS.txt  site.yml
deploy/docker/nginx/: Dockerfile  app.conf  entrypoint.sh  nginx.conf
deploy/docker/uwsgi/: Dockerfile  prestart.sh  uwsgi.ini
deploy/inventories/test/: hosts.yml
deploy/roles/django_deploy/: README.rst  TODO
deploy/roles/django_deploy/defaults/: main.yml
deploy/roles/django_deploy/handlers/: main.yml
deploy/roles/django_deploy/meta/: main.yml
deploy/roles/django_deploy/tasks/: main.yml
docs/: Makefile  conf.py  index.rst
fabfile/: __init__.py  celery.py  rabbitmq.py  sentry.py
fabfile/templates/: celery-schedulesy.conf.tpl  celery-schedulesy.service.tpl  celeryd.tpl
requirements/: auto-common.txt  auto-dev.txt  auto-prod.txt  common.txt  dev.txt  preprod.txt  prod.txt  test.txt
schedulesy/: __init__.py  celery.py  db_router.py  decorators.py  middleware.py  models.py  urls.py  wsgi.py
schedulesy/apps/ade_api/: ade.py  admin.py  apps.py  exception.py  hooks.py  models.py  queries.py  refresh.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
schedulesy/apps/ade_legacy/: admin.py  apps.py  backends.py  models.py  serializers.py  urls.py  views.py
schedulesy/apps/refresh/: apps.py  tasks.py
schedulesy/libs/: authentication.py  decorators.py  permissions.py
schedulesy/libs/api/: client.py  exceptions.py
schedulesy/libs/tests/: models.py  test_authentication.py  test_decorators.py  test_permissions.py
schedulesy/management/commands/: configure_s3.py
schedulesy/migrations/: 0001_initial.py  0002_auto_20190823_1615.py  0003_auto_20190823_1749.py  0004_fingerprint.py  0005_auto_20190826_1037.py
schedulesy/settings/: base.py  dev.py  preprod.py  prod.py  test.py  unittest.py
schedulesy/templates/: 404.html  base.html
(+40 files in other folders)
