[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | schedulesy\/settings
    | schedulesy\/apps\/ade_api\/migrations
    | schedulesy\/apps\/refresh\/migrations
    | fabfile
    | _build
    | buck-out
    | build
    | dist
  )/
  | manage.py
  | tox.ini
  | .coveragerc
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry]
name = "schedulesy"
version = "1.2.2"
description = ""
authors = ["DIP - Université de Strasbourg <dnum-dip@unistra.fr>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
djangorestframework-simplejwt = "4.6.0"
django-cors-headers = "3.7.0"
sentry-sdk = "^1.9.5"
django-cas-sso = "1.1.8"
celery = "5.2.2"
django-storages = {version = "~1.13.0", extras = ["boto3"]}
django-cacheops = "~6.1"
requests = "^2.28.0"
pytz = "2019.2"
britney-utils = "^0.1.2"
britney = "^0.5.1"
ua-parser = "~0.16.0"
python-logstash-async = "2.5.0"
cryptography = "^37.0.2"
django-health-check = "^3.16.5"
ics = "~0.7.0"
psycopg2 = "~2.8.0"
TatSu = "~4.4.0"
Django = "~3.2.0"
python-logstash = "^0.4.8"
celery-skinos = ">=1.0.4"

[tool.poetry.group]
[tool.poetry.group.dev.dependencies]
responses = "^0.21.0"
safety = "^2.1.1"
bandit = "^1.7.4"
black = "^22.6.0"
pytest = "^5.2"
coverage = "^6.4.1"
Sphinx = "^5.0.1"
pylint = "^2"
pycodestyle = "^2.8.0"
django-debug-toolbar = "~2.2.0"
django-extensions = "^3.1.5"
tox = "^3.25.0"
pipdeptree = "^2.2.1"
pre-commit = "^2.19.0"
pyinstrument = "^4.4.0"

[tool.poetry.group.prod.dependencies]
waitress = "2.1.2"
chaussette-backport = "^1.3.1"

[tool.poetry.group.preprod.dependencies]
waitress = "2.1.2"
chaussette-backport = "^1.3.1"

[tool.poetry.group.test.dependencies]
waitress = "2.1.2"
chaussette-backport = "^1.3.1"
